@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-02-02 [B] Fixed contact form referer (thread ID 63565) {eenemeenemuu}
+2010-02-02 [C] Added category parameter to album list link (thread ID 63530) {eenemeenemuu}
 2010-02-01 [C] Fixing contact form redirect (thread ID 63544) {GauGau}
 2010-02-01 [C] Added comment blocks to JS head to increase compatibility and robustness (thread ID 63555) {GauGau}
 2010-01-31 [B] Fixed error message on contact page when no subject was given and the config option was set to optional (thread ID 63541) {GauGau}
